# graphics

./: CMakeLists.txt  grid.frag  grid.vert  primitive.vert  shader.vert
lab1/: dispatch.cpp  dispatch.h  main.cpp
lab2/: Grid.h  Octagon.h  Primitive.h  Shader.h  State.h  Vertex.h  dispatch.cpp  dispatch.h  main.cpp  test.cpp
lab3/: Trace0.txt  Trace1.txt  Trace3.txt  СrossSection.txt
lab3/shaders/: lab3.frag  lab3.vert  lightsource.frag  vector.vert
lab3/src/: Camera.h  CrossSection.cpp  CrossSection.h  Figure.cpp  Figure.h  Light.cpp  Light.h  Material.cpp  Material.h  State.h  Trace.cpp  Trace.h  dispatch.cpp  dispatch.h  main.cpp
lib/: Command.h  GlUtills.h  Shader.h
rr/: main.py
src/: Command.h  Primitive.h  dispatch.cpp  dispatch.h  main.cpp
